--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <h2>文生图生成文本</h2>
     <ul>
         <li>一只狐狸站在老虎身边，神态自若，仿佛掌控一切。</li>
-        <li>森林场景，背景是高大的树木和深绿色的植被。</li>
+        <li>森林场景，背景是高大的树木和深绿色的植被,周围的鼠、蛇、狼、鸟害怕的让出空间。</li>
         <li>老虎显得威风凛凛，但眼中流露出困惑。</li>
         <li>阳光透过树叶洒在地面，增添画面的层次感。</li>
     </ul>
