--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="https://github.com/ZYFX-hkx/wst/blob/main/%E7%8B%90%E5%81%87%E8%99%8E%E5%A8%81.jpg?raw=true">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>狐假虎威 - 文生图展示</title>
     <style>
