--- a/index.html
+++ b/index.html
@@ -1,82 +1,134 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="https://github.com/ZYFX-hkx/wst/blob/main/%E7%8B%90%E5%81%87%E8%99%8E%E5%A8%81.jpg?raw=true">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>狐假虎威 - 文生图展示</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.8;
             margin: 0;
             padding: 0;
-            background-color: #f9f9f9;
+            background-color: #eef2f5;
             color: #333;
-            text-align: center;
         }
-        h1 {
-            margin-top: 20px;
-            font-size: 2em;
+        header {
+            background: linear-gradient(90deg, #4e54c8, #8f94fb);
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+        main {
+            max-width: 800px;
+            margin: 30px auto;
+            background: white;
+            padding: 20px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+        }
+        h2 {
+            border-bottom: 2px solid #8f94fb;
+            padding-bottom: 5px;
+            margin-bottom: 15px;
+            color: #4e54c8;
         }
         ul {
-            list-style-type: none;
-            padding: 0;
+            list-style-type: disc;
+            padding-left: 20px;
+            margin-bottom: 20px;
         }
-        li {
-            background: #fff;
-            margin: 10px auto;
+        ul li {
+            background: #f9f9f9;
+            margin: 5px 0;
             padding: 10px;
-            width: 80%;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            border-left: 4px solid #4e54c8;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
         }
         img {
-            max-width: 80%;
+            max-width: 100%;
             height: auto;
-            margin-top: 20px;
+            margin: 20px 0;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         }
         .description {
-            margin: 20px auto;
-            width: 80%;
-            background: #fff;
             padding: 15px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            background: #eef2f5;
+            border-left: 4px solid #4e54c8;
+            border-radius: 5px;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+            line-height: 1.6;
+        }
+        footer {
+            text-align: center;
+            padding: 15px 0;
+            margin-top: 20px;
+            background: #4e54c8;
+            color: white;
+            font-size: 0.9em;
+            box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
 <body>
-    <h1>狐假虎威 (hú jiǎ hǔ wēi)</h1>
-    
-    <h2>文生图生成文本</h2>
-    <ul>
-        <li>一只狐狸站在老虎身边，神态自若，仿佛掌控一切。</li>
-        <li>森林场景，背景是高大的树木和深绿色的植被,周围的鼠、蛇、狼、鸟害怕的让出空间。</li>
-        <li>老虎显得威风凛凛，但眼中流露出困惑。</li>
-        <li>阳光透过树叶洒在地面，增添画面的层次感。</li>
-    </ul>
+    <header>
+        <h1>狐假虎威 (hú jiǎ hǔ wēi)</h1>
+    </header>
 
-    <h3>希望生成的内容</h3>
-    <ul>
-        <li>画面整体风格充满中国传统水墨风格。</li>
-        <li>狐狸与老虎的表情细节清晰可辨。</li>
-        <li>画面充满故事性和戏剧张力。</li>
-    </ul>
+    <main>
+        <section>
+            <h2>文生图生成文本</h2>
+            <ul>
+                <li>一只狐狸站在老虎身边，神态自若，仿佛掌控一切。</li>
+                <li>森林场景，背景是高大的树木和深绿色的植被，周围的鼠、蛇、狼、鸟害怕的让出空间。</li>
+                <li>老虎显得威风凛凛，但眼中流露出困惑。</li>
+                <li>阳光透过树叶洒在地面，增添画面的层次感。</li>
+            </ul>
+        </section>
 
-    <h3>不希望生成的内容</h3>
-    <ul>
-        <li>背景过于简单或缺乏层次感。</li>
-        <li>狐狸与老虎的比例失调或动作僵硬。</li>
-        <li>画面风格偏离主题或缺乏传统元素。</li>
-    </ul>
+        <section>
+            <h2>希望生成的内容</h2>
+            <ul>
+                <li>画面整体风格充满中国传统水墨风格。</li>
+                <li>狐狸与老虎的表情细节清晰可辨。</li>
+                <li>画面充满故事性和戏剧张力。</li>
+            </ul>
+        </section>
 
-    <h2>生成的图片</h2>
-    <img src="your-generated-image-url-here" alt="狐假虎威生成画面">
+        <section>
+            <h2>不希望生成的内容</h2>
+            <ul>
+                <li>背景过于简单或缺乏层次感。</li>
+                <li>狐狸与老虎的比例失调或动作僵硬。</li>
+                <li>画面风格偏离主题或缺乏传统元素。</li>
+            </ul>
+        </section>
 
-    <div class="description">
-        <p>图片生成过程：
-            使用某文生图工具（如MidJourney或DALL·E），
-            输入以上描述性文本，经过多次调整生成出符合预期的画面。
-            最终保存图片并上传到本页面进行展示。
-        </p>
-    </div>
+        <section>
+            <h2>生成的图片</h2>
+            <img src="your-generated-image-url-here" alt="狐假虎威生成画面">
+        </section>
+
+        <section>
+            <div class="description">
+                <p>图片生成过程：
+                    使用某文生图工具（如MidJourney或DALL·E），
+                    输入以上描述性文本，经过多次调整生成出符合预期的画面。
+                    最终保存图片并上传到本页面进行展示。
+                </p>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        &copy; 2024 文生图展示页面 | 由您精心策划
+    </footer>
 </body>
 </html>
