--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="https://github.com/ZYFX-hkx/wst/blob/main/%E7%8B%90%E5%81%87%E8%99%8E%E5%A8%81.jpg?raw=true">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>狐假虎威 - 文生图展示</title>
     <style>
@@ -113,7 +113,7 @@
 
         <section>
             <h2>生成的图片</h2>
-            <img src="your-generated-image-url-here" alt="狐假虎威生成画面">
+            <img src="https://github.com/ZYFX-hkx/wst/blob/main/%E7%8B%90%E5%81%87%E8%99%8E%E5%A8%81.jpg?raw=true" alt="狐假虎威生成画面">
         </section>
 
         <section>
@@ -128,7 +128,8 @@
     </main>
 
     <footer>
-        &copy; 2024 文生图展示页面 | 由您精心策划
+        &copy; 2024 文生图展示页面 | 精心策划
     </footer>
 </body>
 </html>
+
